Updated CV link

--- a/index.html
+++ b/index.html
@@ -1,75 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hi, I am Thuy</title>
 
-    <script
-      src="https://kit.fontawesome.com/923d045525.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hi, I am Thuy</title>
 
-  <body>
-    <!-----------HEADER------------------>
+  <script src="https://kit.fontawesome.com/923d045525.js" crossorigin="anonymous"></script>
+</head>
 
-    <header class="header">
-      <nav class="menu">
-        <ul class="menu__list">
-          <li class="menu__list--item"><a href="#home">Home</a></li>
-          <li class="menu__list--item"><a href="#about">Profile</a></li>
-          <li class="menu__list--item"><a href="#skills">Skills</a></li>
-          <li class="menu__list--item"><a href="#experience">Experience</a></li>
-          <li class="menu__list--item"><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+<body>
+  <!-----------HEADER------------------>
 
-    <!-------------SECTIONS----------------->
+  <header class="header">
+    <nav class="menu">
+      <ul class="menu__list">
+        <li class="menu__list--item"><a href="#home">Home</a></li>
+        <li class="menu__list--item"><a href="#about">Profile</a></li>
+        <li class="menu__list--item"><a href="#skills">Skills</a></li>
+        <li class="menu__list--item"><a href="#experience">Experience</a></li>
+        <li class="menu__list--item"><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <!--COVER IMAGE-->
-    <div class="cover__page">
-      <h1>Hi, I am Thuy</h1>
-      <p>Junior Web & FE developer</p>
-      <button>Full CV download</button>
+  <!-------------SECTIONS----------------->
+
+  <!--COVER IMAGE-->
+  <div class="cover__page">
+    <h1>Hi, I am Thuy</h1>
+    <p>Junior Web & FE developer</p>
+    <a href="https://resume.io/r/NillTxxz9"><button>Full CV view</button>
+  </div></a>
+
+  <!--about-->
+
+  <section id="about">
+    <div class="about__img">
+      <img src="me_photo.jpg" alt="profile-pic" />
     </div>
 
-    <!--about-->
-
-    <section id="about">
-      <div class="about__img">
-        <img src="me_photo.jpg" alt="profile-pic" />
+    <div class="about__info">
+      <h1 class="section__title">About</h1>
+      <h4>Aspiring web and front-end developer</h4>
+      <div class="about__text">
+        <p>I am Thuy, a web & FE developer based in Czechia.</p>
+        <p>
+          I have worked in multiple industries background and I started my
+          complete career transition towards IT field in later 2020 with focus
+          on web and front-end development. These days my time is spent on
+          deep diving into front-end technologies, trends and coding my own
+          projects.
+        </p>
+        <p>
+          Outside my work, you will likely find me roaming around with
+          longboard, drawing on graphic tablet, travelling and spending time
+          with my friends and family.
+        </p>
       </div>
-
-      <div class="about__info">
-        <h1 class="section__title">About</h1>
-        <h4>Aspiring web and front-end developer</h4>
-        <div class="about__text">
-          <p>I am Thuy, a web & FE developer based in Czechia.</p>
-          <p>
-            I have worked in multiple industries background and I started my
-            complete career transition towards IT field in later 2020 with focus
-            on web and front-end development. These days my time is spent on
-            deep diving into front-end technologies, trends and coding my own
-            projects.
-          </p>
-          <p>
-            Outside my work, you will likely find me roaming around with
-            longboard, drawing on graphic tablet, travelling and spending time
-            with my friends and family.
-          </p>
-        </div>
+      <div class="about__social">
         <div class="about__social">
-          <div class="about__social">
-            <a href="https://www.linkedin.com/in/tthuymai/"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://github.com/mtthuy22"><i class="fa-brands fa-github"></i></a>
-          </div>
+          <a href="https://www.linkedin.com/in/tthuymai/"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/mtthuy22"><i class="fa-brands fa-github"></i></a>
         </div>
       </div>
-    </section>
-    <!-- <section class="about" id="about">
+    </div>
+  </section>
+  <!-- <section class="about" id="about">
     <div class="about__top">
       <h1>ABOUT</h1>
       <h4>Aspiring web and fron-end developper</h4>
@@ -92,5 +90,6 @@
       </div>
     </div>
   </section> -->
-  </body>
+</body>
+
 </html>
