--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <section id="about">
     <div class="about__img">
-      <img src="me_photo.jpg" alt="profile-pic" />
+      <img src="assets/img/me_photo.jpg" alt="profile-pic" />
     </div>
 
     <div class="about__info">
@@ -67,29 +67,72 @@
       </div>
     </div>
   </section>
-  <!-- <section class="about" id="about">
-    <div class="about__top">
-      <h1>ABOUT</h1>
-      <h4>Aspiring web and fron-end developper</h4>
-    </div>
-    <div class="about__container">
-      <div class="about__img">
-        <img src="me_photo.jpg" alt="thuy-photo" />
-      </div>
-      <div class="about__info">
 
-        <p class="about__info--text">
 
-        </p>
-       <div class="about__social">
-          <a href="https://www.linkedin.com/in/tthuymai/"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="https://github.com/mtthuy22"><i class="fa-brands fa-github"></i></a>
-          <a href="https://resume.io/r/NillTxxz9">Full CV</a>
+  
+  <!--skills -->
+
+
+  <section id="skills">
+    <h1>Skills</h1>
+    <div class="skills__container">
+      <div class="skill__info">
+        <div class="skill__icon--wrap">
+          <i class="fa-solid fa-code fa-2xl"></i>
         </div>
-
+        <h4 class="skill__title">HTML</h4>
+        <p class="skill__desc">Semantic HTML elements, tables, lists, BEM methodology </p> 
+      </div>
+      <div class="skill__info">
+        <div class="skill__icon--wrap">
+          <i class="fa-brands fa-css3 fa-2xl"></i>
+        </div>
+        <h4 class="skill__title">CSS</h4>
+        <p class="skill__desc">Grid, flexbox, SASS/SCSS preprocessor, basics of responsive design </p> 
+      </div>
+      <div class="skill__info">
+        <div class="skill__icon--wrap">
+          <i class="fa-brands fa-js fa-2xl"></i>
+        </div>
+        <h4 class="skill__title">Javascript</h4>
+        <p class="skill__desc">Basic knowledge of JavaScript, working with functions, arrays, DOM </p> 
+      </div>
+      <div class="skill__info">
+        <div class="skill__icon--wrap">
+          <i class="fa-brands fa-react fa-2xl"></i>
+        </div>
+        <h4 class="skill__title">JS Frameworks</h4>
+        <p class="skill__desc">
+          React.js - basics, components, reading API data, useState and useEffect hooks <br>
+          Vue.js - Basic theoretical knowledge  </p> 
+      </div>
+      <div class="skill__info">
+        <div class="skill__icon--wrap">
+          <i class="fa-solid fa-language fa-2xl"></i>
+        </div>
+        <h4 class="skill__title">Multilingual</h4>
+        <p class="skill__desc">English - full proficiency level <br>
+          French - intermediate level <br>
+          Japanese - elementary level <br>
+          Czech, Vietnamese - native speaker </p> 
+      </div>
+      <div class="skill__info">
+        <div class="skill__icon--wrap">
+          <i class="fa-solid fa-ellipsis fa-2xl"></i>
+        </div>
+        <h4 class="skill__title">Other</h4>
+        <p class="skill__desc">Adobe Photoshop, InDesign basics
+          Digital illustration
+          Accounting software </p> 
       </div>
     </div>
-  </section> -->
+
+  </section>
+
+
+
+
+
 </body>
 
 </html>
