Added animation to cover

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </svg>
     </div>
     
-      <div class="cover__content">
+      <div class="cover__content txt-animation">
         <h1 class="cover__title">Hi, I am Thuy</h1>
         <p class="cover__text">Junior Web & FE developer</p>
         <a class="cover__link" target="_blank" href="https://resume.io/r/NillTxxz9">
