Fixed SNS icon sizes

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <div class="cover">
       <div class="custom-shape-divider-bottom-1655648853">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-            <path d="M1200 120L0 16.48 0 0 1200 0 1200 120z" class="shape-fill"></path>
+          <path d="M1200 120L0 16.48 0 0 1200 0 1200 120z" class="shape-fill"></path>
         </svg>
-    </div>
-    
+      </div>
+
       <div class="cover__content txt-animation">
         <h1 class="cover__title">Hi, I am Thuy</h1>
         <p class="cover__text">Junior Web & FE developer</p>
@@ -51,16 +51,16 @@
           <button class="cover__btn">Full CV download</button></a>
       </div>
     </div>
-    
+
   </section>
   <!-- MAIN CONTENT STARTS HERE  -->
   <main class="content">
     <!--about-->
-    <section id="about">
+    <section id="about" class="about">
+
       <div class="about__img">
         <img src="assets/img/me_photo.jpg" alt="profile-pic" />
       </div>
-
       <div class="about__info">
         <h1 class="section__title">About</h1>
         <h4>Aspiring web and front-end developer</h4>
@@ -81,8 +81,8 @@
         </div>
         <div class="about__social">
           <div class="about__social">
-            <a href="https://www.linkedin.com/in/tthuymai/"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
-            <a href="https://github.com/mtthuy22"><i class="fa-brands fa-github fa-2x"></i></a>
+            <a href="https://www.linkedin.com/in/tthuymai/"><i class="fa-brands fa-linkedin fa-xl"></i></a>
+            <a href="https://github.com/mtthuy22"><i class="fa-brands fa-github fa-xl"></i></a>
           </div>
         </div>
       </div>
