--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
           <div class="about__social">
             <div class="about__social">
               <a href="https://www.linkedin.com/in/tthuymai/"
-                ><i class="fa-brands fa-linkedin fa-xl"></i
+                ><i class="fa-brands fa-linkedin fa-2xl"></i
               ></a>
               <a href="https://github.com/mtthuy22"
-                ><i class="fa-brands fa-github fa-xl"></i
+                ><i class="fa-brands fa-github fa-2xl"></i
               ></a>
             </div>
           </div>
@@ -107,9 +107,9 @@
 
       <!--skills -->
 
-      <section id="skills">
+      <section id="skills" class="skills">
         <h1 class="section__title">Skills</h1>
-        <ul class="section__list">
+        <ul class="section__list skills__list">
           <li class="skill">
             <div class="skill__icon">
               <i class="fa-solid fa-code fa-5x"></i>
