minor text edits

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <h4 class="skill__title">JS Frameworks</h4>
             <p class="skill__desc">
               React.js - basics, components, reading API data, useState and
-              useEffect hooks <br />
+              useEffect hooks 
               Vue.js - Basic theoretical knowledge
             </p>
           </li>
@@ -155,9 +155,9 @@
             </div>
             <h4 class="skill__title">Multilingual</h4>
             <p class="skill__desc">
-              English - full proficiency level <br />
-              French - intermediate level <br />
-              Japanese - elementary level <br />
+              English - full proficiency 
+              French - intermediate 
+              Japanese - elementary  
               Czech, Vietnamese - native speaker
             </p>
           </li>
