Google fonts, text size

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets\css\style.css" />
     <title>Hi, I am Thuy</title>
     <script
@@ -145,8 +148,7 @@
             <h4 class="skill__title">JS Frameworks</h4>
             <p class="skill__desc">
               React.js - basics, components, reading API data, useState and
-              useEffect hooks 
-              Vue.js - Basic theoretical knowledge
+              useEffect hooks Vue.js - Basic theoretical knowledge
             </p>
           </li>
           <li class="skill">
@@ -155,10 +157,8 @@
             </div>
             <h4 class="skill__title">Multilingual</h4>
             <p class="skill__desc">
-              English - full proficiency 
-              French - intermediate 
-              Japanese - elementary  
-              Czech, Vietnamese - native speaker
+              English - full proficiency French - intermediate Japanese -
+              elementary Czech, Vietnamese - native speaker
             </p>
           </li>
           <li class="skill">
