--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <h4 class="skill__title">JS Frameworks</h4>
             <p class="skill__desc">
               React.js - basics, components, reading API data, useState and
-              useEffect hooks Vue.js - Basic theoretical knowledge
+              useEffect hooks <br> Vue.js - Basic theoretical knowledge
             </p>
           </li>
           <li class="skill">
@@ -157,8 +157,8 @@
             </div>
             <h4 class="skill__title">Multilingual</h4>
             <p class="skill__desc">
-              English - full proficiency French - intermediate Japanese -
-              elementary Czech, Vietnamese - native speaker
+              English - full proficiency<br> French - intermediate <br>Japanese -
+              elementary <br> Czech, Vietnamese - native speaker
             </p>
           </li>
           <li class="skill">
@@ -167,7 +167,7 @@
             </div>
             <h4 class="skill__title">Other</h4>
             <p class="skill__desc">
-              Photoshop, InDesign basics Digital illustration Accounting
+              Photoshop, InDesign basics, Digital illustration, Accounting
               software
             </p>
           </li>
