--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <ul class="section__list skills__list">
           <li class="skill">
             <div class="skill__icon">
-              <i class="fa-solid fa-code fa-5x"></i>
+              <i class="fa-brands fa-html5 fa-4x"></i>
             </div>
             <h4 class="skill__title">HTML</h4>
             <p class="skill__desc">
@@ -124,7 +124,7 @@
           </li>
           <li class="skill">
             <div class="skill__icon">
-              <i class="fa-brands fa-css3-alt fa-5x"></i>
+              <i class="fa-brands fa-css3-alt fa-4x"></i>
             </div>
             <h4 class="skill__title">CSS</h4>
             <div class="skill__desc">
@@ -133,7 +133,7 @@
           </li>
           <li class="skill">
             <div class="skill__icon">
-              <i class="fa-brands fa-js fa-5x"></i>
+              <i class="fa-brands fa-js fa-4x"></i>
             </div>
             <h4 class="skill__title">Javascript</h4>
 
@@ -143,7 +143,7 @@
           </li>
           <li class="skill">
             <div class="skill__icon">
-              <i class="fa-brands fa-react fa-5x"></i>
+              <i class="fa-brands fa-react fa-4x"></i>
             </div>
             <h4 class="skill__title">JS Frameworks</h4>
             <p class="skill__desc">
@@ -153,7 +153,7 @@
           </li>
           <li class="skill">
             <div class="skill__icon">
-              <i class="fa-solid fa-language fa-5x"></i>
+              <i class="fa-solid fa-globe fa-4x"></i>
             </div>
             <h4 class="skill__title">Multilingual</h4>
             <p class="skill__desc">
@@ -163,7 +163,7 @@
           </li>
           <li class="skill">
             <div class="skill__icon">
-              <i class="fa-solid fa-ellipsis fa-5x"></i>
+              <i class="fa-solid fa-ellipsis fa-4x"></i>
             </div>
             <h4 class="skill__title">Other</h4>
             <p class="skill__desc">
