First version draft, done

--- a/index.html
+++ b/index.html
@@ -204,19 +204,18 @@
       </section>
 
       <!-- Contact -->
-      <section id="contact">
-        <div class="contact__container">
+      <section id="contact" class="contact">
           <div class="contact__info">
-            <p>Thanks for scrolling!</p>
-            <p>Thu Thuy Mai</p>
-            <p>Junior Web & FE developer</p>
+            <p class="contact__heading">Thanks for scrolling!</p>
+            <p class="contact__subheading">Thu Thuy Mai</p>
+            <p class="contact__subheading">Junior Web & FE developer</p>
           </div>
           <div class="contact__details">
-            <p>Contact me</p>
-            <p>mai.thuthuy91@gmail.com</p>
-            <p>+420 724 966 657</p>
+            <p class="contact__heading">Contact me</p>
+            <p class="contact__subheading">mai.thuthuy91@gmail.com</p>
+            <p class="contact__subheading">+420 724 966 657</p>
           </div>
-        </div>
+       
       </section>
     </main>
     <!-- Footer -->
