updated email link

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           </div>
           <div class="contact__details">
             <p class="contact__heading">Contact me</p>
-            <p class="contact__subheading">mai.thuthuy91@gmail.com</p>
+            <a href="mailto:mai.thuthuy91@gmail.com" class="contact__subheading">mai.thuthuy91@gmail.com</a>
             <p class="contact__subheading">+420 724 966 657</p>
           </div>
        
