--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets\css\style.css" />
     <title>Hi, I am Thuy</title>
     <script
@@ -70,7 +73,8 @@
         </div>
       </div>
     </section>
-    <!-- MAIN CONTENT STARTS HERE  -->
+
+    <!--=========== MAIN CONTENT STARTS HERE ============ -->
     <main class="content">
       <!--about-->
       <section id="about" class="about">
@@ -148,7 +152,8 @@
             <h4 class="skill__title">JS Frameworks</h4>
             <p class="skill__desc">
               React.js - basics, components, reading API data, useState and
-              useEffect hooks <br> Vue.js - Basic theoretical knowledge
+              useEffect hooks <br />
+              Vue.js - Basic theoretical knowledge
             </p>
           </li>
           <li class="skill">
@@ -157,8 +162,9 @@
             </div>
             <h4 class="skill__title">Multilingual</h4>
             <p class="skill__desc">
-              English - full proficiency<br> French - intermediate <br>Japanese -
-              elementary <br> Czech, Vietnamese - native speaker
+              English - full proficiency<br />
+              French - intermediate <br />Japanese - elementary <br />
+              Czech, Vietnamese - native speaker
             </p>
           </li>
           <li class="skill">
@@ -205,17 +211,18 @@
 
       <!-- Contact -->
       <section id="contact" class="contact">
-          <div class="contact__info">
-            <p class="contact__heading">Thanks for scrolling!</p>
-            <p class="contact__subheading">Thu Thuy Mai</p>
-            <p class="contact__subheading">Junior Web & FE developer</p>
-          </div>
-          <div class="contact__details">
-            <p class="contact__heading">Contact me</p>
-            <a href="mailto:mai.thuthuy91@gmail.com" class="contact__subheading">mai.thuthuy91@gmail.com</a>
-            <p class="contact__subheading">+420 724 966 657</p>
-          </div>
-       
+        <div class="contact__info">
+          <p class="contact__heading">Thanks for scrolling!</p>
+          <p class="contact__subheading">Thu Thuy Mai</p>
+          <p class="contact__subheading">Junior Web & FE developer</p>
+        </div>
+        <div class="contact__details">
+          <p class="contact__heading">Contact me</p>
+          <a href="mailto:mai.thuthuy91@gmail.com" class="contact__subheading"
+            >mai.thuthuy91@gmail.com</a
+          >
+          <p class="contact__subheading">+420 724 966 657</p>
+        </div>
       </section>
     </main>
     <!-- Footer -->
