experience, contact section responsive

--- a/index.html
+++ b/index.html
@@ -192,15 +192,15 @@
 
     <!-- Contact -->
     <section id="contact" class="contact">
-      <div class="contact__info">
+      <div class="contact__item">
         <p class="contact__heading">Thanks for scrolling!</p>
         <p class="contact__subheading">Thu Thuy Mai</p>
         <p class="contact__subheading">Junior Web & FE developer</p>
       </div>
-      <div class="contact__details">
+      <div class="contact__item">
         <p class="contact__heading">Contact me</p>
-        <a href="mailto:mai.thuthuy91@gmail.com" class="contact__subheading">mai.thuthuy91@gmail.com</a>
-        <p class="contact__subheading">+420 724 966 657</p>
+        <a href="mailto:mai.thuthuy91@gmail.com" class="contact__text">mai.thuthuy91@gmail.com</a>
+        <p class="contact__text">+420 724 966 657</p>
       </div>
     </section>
   </main>
